--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Social Link Profile
+title: Jessica Randall
 ---
 
 <div class="container">
@@ -12,19 +12,19 @@ title: Social Link Profile
         <div class="social-links">
             <a href="#">GitHub</a>
         </div>
-        <!--  -->
+        <!-- link 1 -->
         <div class="social-links">
             <a href="#">Frontend Mentor</a>
         </div>
-        <!--  -->
+        <!-- link 2 -->
         <div class="social-links">
             <a href="#">LinkedIn</a>
         </div>
-        <!--  -->
+        <!-- link 3 -->
         <div class="social-links">
             <a href="#">Twitter</a>
         </div>
-        <!--  -->
+        <!-- link 4 -->
         <div class="social-links">
             <a href="#">Instagram</a>
         </div>
